--- a/themes/relibond/dev/scss/f_components/_employee.scss
+++ b/themes/relibond/dev/scss/f_components/_employee.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   box-shadow: 0px 0px 20px rgba($color-brandFirst-darker-3, 0.15);
-  min-height: 340px;
+  min-height: 334px;
 
   &_image {
     max-width: 120px;
