--- a/themes/relibond/style.css
+++ b/themes/relibond/style.css
@@ -2765,7 +2765,7 @@ input:first-child, textarea:first-child {
   list-style-position: inside;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 768px) {
   .page-contactAndJobs_form_wrap {
     margin-top: 32px;
   }
@@ -2909,7 +2909,7 @@ input[type="submit"]:active, .button-primary:active {
   flex-direction: column;
   align-items: center;
   box-shadow: 0px 0px 20px rgba(95, 61, 12, 0.15);
-  min-height: 330px;
+  min-height: 334px;
 }
 
 .employee_image {
